--- a/vignettes/CodelistGenerator_extracting_procedure_codes.Rmd
+++ b/vignettes/CodelistGenerator_extracting_procedure_codes.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "CodelistGenerator Extracting Procedure Codes"
+title: "CodelistGenerator_extracting_procedure_codes"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{CodelistGenerator_extracting_procedure_codes}
